--- a/firstYearReflection.html
+++ b/firstYearReflection.html
@@ -19,6 +19,7 @@
                 <li><a href="Projects.html">Projects</a></li>
                 <li><a href="Professional.html">Professional</a></li>
                 <li><a href="firstYearReflection.html">First Year Reflection</a></li>
+                <li><a href="PSCC.html">PSCC</a></li>
             </ul>
         </nav>
         <div class="title5" data-aos="slide-up">
