--- a/Professional.html
+++ b/Professional.html
@@ -52,7 +52,7 @@
         <h2 data-aos="slide-up">resume</h2>
         <div class="pdf" data-aos="fade-in">
             <center>
-               <embed src="JB_SWE_Resume_2023.pdf" width="55%" height="1230px"> 
+               <embed src="JB_SWE_Resume_2023_Oct.pdf" width="55%" height="1230px"> 
             </center>
         </div>
       </div>
