--- a/PSCC.html
+++ b/PSCC.html
@@ -29,12 +29,18 @@
       </div>
 
       <div class="PersonalStatement">
-        <h2 data-aos="slide-up">Personal Statement</h2>
+        <h2 data-aos="slide-up">Personal Statement (October 2022)</h2>
         <div class="PersonalStatement" data-aos="slide-up">
             <p data-aos="fade-in">
                 Currently, I am majoring in Information Systems at the Foster School of Business at UW. However, I also want to major in Informatics with a Software Development track or Computer Science. The reason why I chose these fields is because I’m always been a tech person. I love tech, and I believe tech has improved day-to-day lives by a lot. Funny enough, while doing Running Start, I took some CS classes, and I didn’t really like it then, but I also started to like business. It's not a corporate business, though. So I explored more into business, and I liked that too. So now I see myself working and doing something between those two roles. Either software engineering, technical product management, or even owning a business. <br><br>
                 But with any industry, there are bound to be some social problems. A common problem in the tech and business industry is the lack of diversity, racism, and gender discrimination. According to an article by Matt Gonzalez, “More than half of Black workers (54%) say they experience racial bias at work - a significantly higher percentage than for any other racial group.” So, how can my major combat this? I think it is more than just your major; it is also what you take part in and what resources you can take advantage of. For example, I am pretty involved with my church, and I do know that at my church, there are a lot of people who work in the industry, so they can help you get a leg up in the job application process as well as working there. There are also RSOs on campus relating to the thighs I wanna do that I wanna take more part in this year. Hopefully, this will help me be more prepared to face these issues in the industry.
             </p>
+        </div>
+        <h2 data-aos="slide-up">Revised Personal Statement (December 2022)</h2>
+        <div class="PersonalStatement" data-aos="slide-up">
+            <p>About 10 weeks later, we are in our last couple weeks of fall quarter, Sophomore year. As I wrap up this quarter, I can’t help but relate to what some SWEs have mentioned. Another problem I didn’t think I said in my statement back in October is work-life balance in the tech industry, as well as imposter syndrome: the need to always catch up to the latest technology. I definitely relate to this as I spend many nights staying up, coding, debugging, and simply catching up with content. That got me thinking: What can I try to do / What do I want to see in the future regarding tech and social positive change? <br><br>
+                I want to see a change in diversity (October reflection), but I now want to see better work-life experiences as more social interaction. I also notice people spend more time alone, including coding, so seeing teamwork will foster better team dynamics as well as work environment (Interview Reflection.) This motivates me to not only pursue tech and be a part of a fast and growing industry that helps improve lives, but I want to be able to improve lives that help make other lives better (if that makes sense.)
+                </p>
         </div>
       </div>
 
