--- a/PSCC.html
+++ b/PSCC.html
@@ -109,6 +109,21 @@
             </p>
         </div>
 
+        <div class="FinalReflection">
+            <h2 data-aos="slide-up">Final Reflections</h2>
+            <div class="FinalReflection" data-aos="slide-up">
+                <img src="EDUC300_FinalPoster.jpeg"></a>
+                <p data-aos="fade-in">
+
+                    Reflecting on the Brotherhood Initiative sophomore class, this year has passed extremely fast. This year, we are focused more on creating positive social changes in our community. With that, this year's class has challenged me to think more abroad regarding a societal topic. So, with that, how my thinking has grown and developed this year relates to opportunities and challenges of positive social change; on the positive side, this year-long project has helped me discover how big of a problem, specifically homelessness in Seattle, really is. I always knew that homelessness has always been an issue in the greater Seattle area. Still, when you take a more extensive dive into the problem, you see more than the homeless, such as drug addiction, housing crisis, mental health issues, and much more. This year-long project has also helped me develop research issues with topics happening right before me, such as homelessness. However, some challenges when dealing with issues like this definitely involve time. Problems like this take a lot of time to find the proper resources and solutions or even schedule meetings between all team members or the organization we are trying to interview. <br><br>
+	                But moving on to the community side of the reflection, how I better understand the role of being community-centered in positive social change is that I feel like a lot of people who are living in Seattle or any other major city with a homeless problem, often complain but usually don't do anything. Yes, the city should be responsible for handling these problems, but what if the city cares less about the issue than you do? Well, you have to step up if you want to protect and connect with your community. Community-centered means putting the area and place you grew up in or where you live as part of your problem scope. What I mean by that is if you have the energy and time to stand up, take part, and provide help, then you should allocate it to that. For example, I'm allocating a lot of time and energy toward my church community because I want to be there for the kids and help build the next generation. <br><br>
+	                Reflecting on the professional working side of things, I can hold myself accountable in the professional workspace regarding this social change experience. This is pretty broad, and BI expects us to find artifacts without much guidance. But I prefer a bit more of a structure like a timeline, specific requirements per project, and so on. That will help me more in the workspace, but this project has helped me reflect that I am easily adaptable to many different workspaces. <br><br>
+	                Last but not least, my group's effort shaped my perspective on social change within my academic and professional goals. Although this project is separate from my goals, it allows me to see different perspectives on a specific topic. For example, within my academic and professional field, this year's project gave me different lenses and experience in standing up for a social problem. For if there is a workspace social conflict, for example, this year's project gave me the lens, tools, and experience to help me stand up for that. <br><br>
+
+
+                </p>
+            </div>
+
 
 
 
